--- a/certifications.html
+++ b/certifications.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Certifications | Niknaz Sadehvandi</title>
+
+  <!-- Primary SEO -->
   <meta name="description" content="Verified certifications and credentials for Niknaz Sadehvandi — cybersecurity, scripting, and cloud fundamentals." />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Certifications | Niknaz Sadehvandi" />
+  <meta property="og:description" content="Completed credentials supporting SIEM workflows, automation, and security projects." />
+  <meta property="og:type" content="website" />
+
   <link rel="icon" href="assets/favicon.png" />
+
   <style>
     :root {
       --navy: #0a1f44;
@@ -16,6 +26,7 @@
       --radius: 16px;
       --shadow: 0 10px 30px rgba(0,0,0,.08);
       --border: rgba(10,31,68,.12);
+      --focus: 0 0 0 3px rgba(13,110,253,.25);
     }
     * { box-sizing: border-box; }
     body {
@@ -24,6 +35,9 @@
       background: var(--bg);
       color: #222;
     }
+    a { color: var(--navy2); text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    a:focus { outline: none; box-shadow: var(--focus); border-radius: 10px; }
 
     header { background: var(--navy); color: #fff; }
     .nav {
@@ -34,53 +48,30 @@
       justify-content: space-between;
       padding: 16px 20px;
       gap: 16px;
+      flex-wrap: wrap;
     }
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      font-weight: 700;
-    }
+    .brand { display: flex; align-items: center; gap: 12px; font-weight: 700; }
     .brand .lock {
-      width: 26px;
-      height: 26px;
-      border: 2px solid #fff;
-      border-radius: 6px;
+      width: 26px; height: 26px;
+      border: 2px solid #fff; border-radius: 6px;
       position: relative;
     }
     .brand .lock:before {
       content: "";
       position: absolute;
-      top: -12px;
-      left: 6px;
-      right: 6px;
+      top: -12px; left: 6px; right: 6px;
       height: 12px;
       border: 2px solid #fff;
       border-bottom: none;
       border-radius: 10px 10px 0 0;
     }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 22px;
-      margin: 0;
-      padding: 0;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: #e8eef8;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    nav a.active {
-      color: #fff;
-      border-bottom: 2px solid #fff;
-      padding-bottom: 2px;
-    }
+    nav ul { list-style: none; display: flex; gap: 22px; margin: 0; padding: 0; flex-wrap: wrap; }
+    nav a { color: #e8eef8; font-weight: 600; }
+    nav a.active { color: #fff; border-bottom: 2px solid #fff; padding-bottom: 2px; }
 
     .wrap { max-width: 1100px; margin: 24px auto; padding: 0 20px; }
     h1 { color: var(--navy2); margin: 6px 0 6px; }
-    .lead { color: var(--muted); margin: 0 0 14px; max-width: 85ch; }
+    .lead { color: var(--muted); margin: 0 0 14px; max-width: 85ch; line-height: 1.55; }
 
     .list { display: grid; gap: 14px; }
 
@@ -100,16 +91,12 @@
       .cert .actions { grid-column: 1 / -1; }
     }
 
-    .logo {
-      width: 64px;
-      height: 64px;
-      object-fit: contain;
-      filter: saturate(0.9);
-    }
+    .logo { width: 64px; height: 64px; object-fit: contain; filter: saturate(0.9); }
     .cert h3 { margin: 0 0 4px; color: var(--navy2); }
     .meta { margin: 0; color: #2d3e56; font-size: 14px; }
-    .desc { margin: 6px 0 0; color: var(--muted); }
+    .desc { margin: 6px 0 0; color: var(--muted); line-height: 1.5; }
 
+    .actions { display: flex; gap: 10px; align-items: center; justify-content: flex-end; flex-wrap: wrap; }
     .btn {
       display: inline-flex;
       align-items: center;
@@ -124,10 +111,18 @@
       white-space: nowrap;
     }
     .btn:hover { filter: brightness(1.05); text-decoration: none; }
-    .btn.alt {
+    .btn:focus { outline: none; box-shadow: var(--focus); }
+    .btn.alt { background: #fff; color: var(--navy2); border: 1px solid var(--navy2); }
+    .pill {
+      display: inline-flex;
+      align-items: center;
+      padding: 10px 12px;
+      border-radius: 999px;
+      border: 1px solid var(--border);
+      color: #6b7787;
       background: #fff;
-      color: var(--navy2);
-      border: 2px solid var(--navy2);
+      font-weight: 600;
+      white-space: nowrap;
     }
 
     footer { margin-top: 28px; background: var(--navy); color: #cfd9ea; }
@@ -141,10 +136,10 @@
       gap: 12px;
       flex-wrap: wrap;
     }
-    footer a { color: #cfd9ea; text-decoration: none; }
-    footer a:hover { text-decoration: underline; }
+    footer a { color: #e8eef8; }
   </style>
 </head>
+
 <body>
   <header>
     <div class="nav">
@@ -166,11 +161,11 @@
   <main class="wrap">
     <h1>Certifications</h1>
     <p class="lead">
-      Completed credentials highlighting scripting and analytics foundations that support SIEM workflows, automation, and security projects.
+      Completed credentials supporting SIEM workflows, scripting automation, and security projects.
     </p>
 
-    <section class="list" aria-label="Completed certifications">
-      <!-- IBM Python Basics -->
+    <section class="list" aria-label="Certifications">
+      <!-- IBM Python Basics (listed on resume) -->
       <article class="cert">
         <img class="logo" src="assets/ibm-logo.png" alt="IBM logo" />
         <div>
@@ -178,26 +173,23 @@
           <p class="meta">IBM • 2024</p>
           <p class="desc">Python scripting foundations used for automation, parsing outputs, and working with datasets in labs and projects.</p>
         </div>
-
-        <!-- OPTIONAL: replace href with real verification URL or local proof file -->
         <div class="actions">
-          <!-- Example local proof file: assets/certs/ibm-python-basics.pdf -->
-          <a class="btn" href="assets/certs/ibm-python-basics.pdf" target="_blank" rel="noopener">View proof</a>
+          <!-- If you upload proof later, replace pill with a real link:
+               href="assets/certs/ibm-python-basics.pdf" -->
+          <span class="pill">Proof: pending upload</span>
         </div>
       </article>
 
-      <!-- Stanford R Fundamentals -->
+      <!-- Optional section: only keep items you can prove -->
       <article class="cert">
-        <img class="logo" src="assets/stanford-logo.png" alt="Stanford Online logo" />
+        <img class="logo" src="assets/placeholder-badge.png" alt="Credential badge" />
         <div>
-          <h3>R Programming Fundamentals</h3>
-          <p class="meta">Stanford Online • 2024</p>
-          <p class="desc">Data wrangling and visualization foundations used in academic exercises and reporting practice.</p>
+          <h3>Additional credentials</h3>
+          <p class="meta">Add only if verified</p>
+          <p class="desc">If you include a credential here, add either a public verification URL or a PDF proof file in <code>assets/certs/</code>.</p>
         </div>
-
-        <!-- OPTIONAL: replace href with real verification URL or local proof file -->
         <div class="actions">
-          <a class="btn" href="assets/certs/stanford-r-fundamentals.pdf" target="_blank" rel="noopener">View proof</a>
+          <a class="btn alt" href="contact.html">Request verification</a>
         </div>
       </article>
     </section>
