--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Niknaz Sadehvandi | Cybersecurity Analyst</title>
 
   <!-- Primary SEO -->
-  <meta name="description" content="Cybersecurity Analyst specializing in Elastic SIEM, Sysmon, Zeek, and SOC investigations. Built Fleet-managed pipelines, validated 1,500+ Zeek events via Filebeat, and delivered Windows security audits aligned with MITRE ATT&CK, NIST, and SOX ITGC." />
+  <meta name="description" content="Cybersecurity Analyst specializing in Elastic SIEM, Sysmon, Zeek, and SOC investigations. Built Fleet-managed pipelines, validated 1,500+ Zeek events via Filebeat, and delivered Windows security audits aligned with MITRE ATT&CK and NIST; familiar with SOX ITGC concepts." />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
@@ -205,9 +205,9 @@
 
   <!-- Hero -->
   <section class="hero">
-    <img class="headshot" src="assets/profile.jpg" alt="Niknaz Sadehvandi" loading="lazy" decoding="async" />
-
-    <div>
+    <div class="headshot" aria-hidden="true" style="display:flex;align-items:center;justify-content:center;color:#6b7787;">
+  No photo
+</div>
       <h1>Cybersecurity Analyst</h1>
       <p class="tagline">Elastic SIEM • Sysmon • Zeek • SOC Investigations • Windows Security Audits • MITRE ATT&amp;CK • NIST • SOX ITGC</p>
 
@@ -306,7 +306,7 @@
           Verified real-time visibility and data quality in Kibana Discover.
         </p>
         <p>
-          <a href="projects.html#elastic-siem" rel="noopener">View details &rarr;</a>
+          <article class="card" id="elastic-siem">
         </p>
       </article>
 
@@ -357,7 +357,7 @@
           Designed an 8-bit ALU and simple CPU in Logisim-evolution supporting multiple operations with registers, flags, and a control unit.
         </p>
         <p>
-          <a href="CPU_Project.pdf" target="_blank" rel="noopener">
+          <a href="https://github.com/niknaz-65/alu-cpu-logisim/blob/main/CPU_Project.pdf" target="_blank" rel="noopener">
             Project report (PDF) &rarr;
           </a>
         </p>
