--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       </p>
 
       <p class="summary">
-        Founder &amp; Cybersecurity Consultant — Nikki IT &amp; Security Consulting (Dec 2025–Present).
+        Founder & Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present).
       </p>
 
       <div class="cta">
