--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 
   <!-- Hero -->
   <section class="hero">
-    <div class="headshot" aria-hidden="true" style="display:flex;align-items:center;justify-content:center;color:#6b7787;">
-  No photo
-</div>
+    <img class="headshot"
+     src="assets/profile.jpg"
+     alt="Niknaz Sadehvandi, Cybersecurity Analyst">
       <h1>Cybersecurity Analyst</h1>
       <p class="tagline">Elastic SIEM • Sysmon • Zeek • SOC Investigations • Windows Security Audits • MITRE ATT&amp;CK • NIST • SOX ITGC</p>
 
@@ -218,9 +218,10 @@
       </ul>
 
       <p class="summary">
-        Cybersecurity Analyst with hands-on experience in endpoint security, SIEM monitoring, log analysis, and security investigations.
-        Built Fleet-managed Elastic SIEM ingestion with Sysmon telemetry and validated Zeek network events via Filebeat.
-        Delivered Windows security assessments and hardening recommendations aligned with MITRE ATT&amp;CK, NIST, and SOX ITGC.
+        Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, 
+        and SOC investigations.Founder of NS Cybersecurity,delivering Elastic SIEM ingestion 
+        pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with 
+        MITRE ATT&CK and NIST.
       </p>
 
       <p class="summary">
